--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./lib/index.js",
+    "build": "tsc -p src",
+    "watch": "tsc -w -p src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "minimist": "^1.2.0",
     "request": "^2.85.0"
+  },
+  "devDependencies": {
+    "@types/minimist": "^1.2.0",
+    "@types/node": "^9.6.2",
+    "@types/request": "^2.47.0",
+    "typescript": "^2.8.1"
   }
 }
